; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bnx2fc/extr_bnx2fc_tgt.c_bnx2fc_ofld_timer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bnx2fc/extr_bnx2fc_tgt.c_bnx2fc_ofld_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2fc_rport = type { i32, i32 }

@.str = private unnamed_addr constant [27 x i8] c"entered bnx2fc_ofld_timer\0A\00", align 1
@BNX2FC_FLAG_OFFLOADED = common dso_local global i32 0, align 4
@BNX2FC_FLAG_ENABLED = common dso_local global i32 0, align 4
@BNX2FC_FLAG_OFLD_REQ_CMPL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @bnx2fc_ofld_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnx2fc_ofld_timer(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.bnx2fc_rport*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = inttoptr i64 %4 to %struct.bnx2fc_rport*
  store %struct.bnx2fc_rport* %5, %struct.bnx2fc_rport** %3, align 8
  %6 = load %struct.bnx2fc_rport*, %struct.bnx2fc_rport** %3, align 8
  %7 = call i32 @BNX2FC_TGT_DBG(%struct.bnx2fc_rport* %6, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %8 = load i32, i32* @BNX2FC_FLAG_OFFLOADED, align 4
  %9 = load %struct.bnx2fc_rport*, %struct.bnx2fc_rport** %3, align 8
  %10 = getelementptr inbounds %struct.bnx2fc_rport, %struct.bnx2fc_rport* %9, i32 0, i32 1
  %11 = call i32 @clear_bit(i32 %8, i32* %10)
  %12 = load i32, i32* @BNX2FC_FLAG_ENABLED, align 4
  %13 = load %struct.bnx2fc_rport*, %struct.bnx2fc_rport** %3, align 8
  %14 = getelementptr inbounds %struct.bnx2fc_rport, %struct.bnx2fc_rport* %13, i32 0, i32 1
  %15 = call i32 @clear_bit(i32 %12, i32* %14)
  %16 = load i32, i32* @BNX2FC_FLAG_OFLD_REQ_CMPL, align 4
  %17 = load %struct.bnx2fc_rport*, %struct.bnx2fc_rport** %3, align 8
  %18 = getelementptr inbounds %struct.bnx2fc_rport, %struct.bnx2fc_rport* %17, i32 0, i32 1
  %19 = call i32 @set_bit(i32 %16, i32* %18)
  %20 = load %struct.bnx2fc_rport*, %struct.bnx2fc_rport** %3, align 8
  %21 = getelementptr inbounds %struct.bnx2fc_rport, %struct.bnx2fc_rport* %20, i32 0, i32 0
  %22 = call i32 @wake_up_interruptible(i32* %21)
  ret void
}

declare dso_local i32 @BNX2FC_TGT_DBG(%struct.bnx2fc_rport*, i8*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @wake_up_interruptible(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
